--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.5.0",
     "gh-pages": "^2.1.1",
     "react": "^16.10.0",
     "react-dom": "^16.10.0",
