--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.5.0",
+    "@material-ui/styles": "^4.5.0",
     "@reach/router": "^1.2.1",
     "gh-pages": "^2.1.1",
     "react": "^16.10.0",
