--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "gh-pages": "^2.1.1",
     "react": "^16.10.0",
     "react-dom": "^16.10.0",
+    "react-redux": "^7.1.1",
     "react-scripts": "3.1.2",
+    "reselect": "^4.0.0",
     "styled-components": "^4.4.0"
   },
   "scripts": {
