--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "react-dom": "^16.10.0",
     "react-redux": "^7.1.1",
     "react-scripts": "3.1.2",
-    "reselect": "^4.0.0",
-    "styled-components": "^4.4.0"
+    "redux": "^4.0.4",
+    "redux-starter-kit": "^0.7.0",
+    "styled-components": "^4.4.0",
+    "uuid": "^3.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
