--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@material-ui/styles": "^4.5.0",
     "@reach/router": "^1.2.1",
     "gh-pages": "^2.1.1",
+    "notistack": "^0.9.4",
     "react": "^16.10.0",
     "react-dom": "^16.10.0",
     "react-redux": "^7.1.1",
